--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "postcss.config.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js --host 0.0.0.0",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
