Update docker and webpack dev server

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "dev": "concurrently \"npm run local\" \"npm run client\"",
     "install:client": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compose:up": "docker-compose up --build",
-    "compose:up:force": "docker-compose up --build --force-recreate",
-    "compose:background": "docker-compose up -d --build",
+    "compose:up": "docker-compose up",
+    "compose:up:build": "docker-compose up --build",
+    "compose:up:build:force": "docker-compose up --build --force-recreate",
+    "compose:up:build:background": "docker-compose up -d --build",
     "compose:down": "docker-compose down -v",
+    "container:del:all": "docker rm -vf $(docker ps -a -q)",
+    "image:del:all": "docker image prune -a",
     "shell:web": "docker exec -it node-web /bin/bash"
   },
   "author": "",
