--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run local\" \"npm run client\"",
     "install:client": "npm install --prefix client",
+    "sass:rebuild:client": "npm uninstall --save node-sass --prefix client && npm cache clean --force --prefix client && npm install --save node-sass --prefix client && npm rebuild node-sass --force --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compose:up": "docker-compose up",
     "compose:up:build": "docker-compose up --build",
@@ -27,6 +28,7 @@
     "es6-promisify": "^6.0.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "faker": "^4.1.0",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
