--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
+    "formik": "^1.5.7",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -36,7 +38,6 @@
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
