--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "postcss.config.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js --host 0.0.0.0",
+    "start": "webpack-dev-server --open --config webpack.dev.js --watch-poll --host 0.0.0.0",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,10 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.1"
   },
   "devDependencies": {
