--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "formik": "^1.5.7",
+    "mongoose": "^5.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -22,7 +23,8 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.1"
+    "styled-components": "^4.3.1",
+    "validator": "^11.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
